add the last two fields

--- a/frontend/src/assets/styles/global.scss
+++ b/frontend/src/assets/styles/global.scss
@@ -1482,6 +1482,7 @@ children: Year, Month, Day.
 }
 
 cds-textarea::part(label),
+cds-toggle::part(cds--toggle__label-text),
 .cds-text-input-label {
   color: var(--light-theme-text-text-primary, #131315);
 }
