--- a/frontend/src/assets/styles/global.scss
+++ b/frontend/src/assets/styles/global.scss
@@ -1349,11 +1349,15 @@ cds-accordion-item:not([open]) {
   gap: 0.25rem;
 }
 
-.horizontal-input-grouping {
+.horizontal-input-grouping, .horizontal-input-grouping-1_5 {
   display: flex;
   flex-direction: row;
   gap: 1rem;
   align-items: end;
+}
+
+.horizontal-input-grouping-1_5 {
+  gap: 1.5rem;
 }
 
 .grid {
