feat(fe:FSADT1-1963): Create related client create screen (#1756)
* fix preserveUnchangedData

* add a new client relationship

* add the last two fields

* layout last two fields

* comment out debug values display

* fix: click to add new relationship

* chore: update components file

* add relationship from empty screen

* set index-related props

* clear Related client's location options

* test: enter new relationship data

* chore: add relationshipTypes stub

* rename prop

* fix: fix issue on selecting Related client's location

* reduce data on stub

* test: fix autocomplete selection

--- a/frontend/src/assets/styles/global.scss
+++ b/frontend/src/assets/styles/global.scss
@@ -1349,11 +1349,15 @@ cds-accordion-item:not([open]) {
   gap: 0.25rem;
 }
 
-.horizontal-input-grouping {
+.horizontal-input-grouping, .horizontal-input-grouping-1_5 {
   display: flex;
   flex-direction: row;
   gap: 1rem;
   align-items: end;
+}
+
+.horizontal-input-grouping-1_5 {
+  gap: 1.5rem;
 }
 
 .grid {
@@ -1482,6 +1486,7 @@ children: Year, Month, Day.
 }
 
 cds-textarea::part(label),
+cds-toggle::part(cds--toggle__label-text),
 .cds-text-input-label {
   color: var(--light-theme-text-text-primary, #131315);
 }
