--- a/frontend/src/assets/styles/global.scss
+++ b/frontend/src/assets/styles/global.scss
@@ -1845,13 +1845,15 @@ cds-table-header-cell {
 }
 
 #relatioships-table {
-  --col-248-px: 248;
-  --col-488-px: 488;
-  --col-88-px: 88;
-
   --padding-fixed-px: 16;
 
-  --col-padding-8-px: 8;
+  --col-104-px-raw: 104;
+
+  --col-310-px: calc(310 - 2 * var(--padding-fixed-px));
+  --col-210-px: calc(210 - 2 * var(--padding-fixed-px));
+  --col-120-px: calc(120 - 2 * var(--padding-fixed-px));
+
+  --col-padding-10-px: 10;
   --col-padding-16-px: 16;
   --amount-actions-column: 1;
 
@@ -1860,11 +1862,11 @@ cds-table-header-cell {
   }
 
   --total: calc(
-    var(--col-padding-8-px)
-    + var(--col-248-px) + 2 * var(--padding-fixed-px)
-    + var(--col-488-px) + 2 * var(--padding-fixed-px)
-    + (2 + var(--amount-actions-column)) * (var(--col-88-px) + 2 * var(--padding-fixed-px))
-    + var(--col-padding-16-px)
+    var(--col-padding-10-px)
+    + 2 * (var(--col-310-px) + 2 * var(--padding-fixed-px))
+    + var(--col-210-px) + 2 * var(--padding-fixed-px)
+    + 2 * (var(--col-120-px) + 2 * var(--padding-fixed-px))
+    + var(--amount-actions-column) * var(--col-104-px-raw)
   );
 
   /*
@@ -1880,21 +1882,31 @@ cds-table-header-cell {
   can adjust responsively.
   */
 
-  .col-248-px {
-    width: calc( 100% * (var(--col-248-px) + 2 * var(--padding-fixed-px)) / var(--total));
+  .col-210-px {
+    width: calc( 100% * (var(--col-210-px) + 2 * var(--padding-fixed-px)) / var(--total));
   }
   
-  .col-488-px {
-    width: calc( 100% * (var(--col-488-px) + 2 * var(--padding-fixed-px)) / var(--total));
+  .col-310-px {
+    width: calc( 100% * (var(--col-310-px) + 2 * var(--padding-fixed-px)) / var(--total));
   }
 
-  .col-88-px {
-    width: calc( 100% * (var(--col-88-px) + 2 * var(--padding-fixed-px)) / var(--total));
+  .col-120-px {
+    width: calc( 100% * (var(--col-120-px) + 2 * var(--padding-fixed-px)) / var(--total));
   }
 
-  .col-padding-8-px {
+  .col-104-px-no-padding {
     padding: 0;
-    width: calc(var(--col-padding-8-px) / 16 * 1rem);
+    width: calc( 100% * (var(--col-104-px-raw)) / var(--total));
+  }
+
+  .col-104-px-fixed {
+    padding: 0;
+    width: var(--col-104-px-raw);
+  }
+
+  .col-padding-10-px {
+    padding: 0;
+    width: calc(var(--col-padding-10-px) / 16 * 1rem);
   }
 
   .col-padding-16-px {
