remove min-width for the data-table

--- a/frontend/src/assets/styles/global.scss
+++ b/frontend/src/assets/styles/global.scss
@@ -1845,6 +1845,8 @@ cds-table-header-cell {
 }
 
 #relatioships-table {
+  min-width: unset;
+
   --padding-fixed-px: 16;
 
   --col-104-px-raw: 104;
